--- a/requirements.txt
+++ b/requirements.txt
@@ -14,14 +14,17 @@ debugpy==1.5.1
 decorator==5.1.0
 defusedxml==0.7.1
 entrypoints==0.3
+htmlmin==0.1.12
 idna==3.3
+ImageHash==4.2.1
 iniconfig==1.1.1
 ipykernel==6.5.0
 ipython==7.29.0
 ipython-genutils==0.2.0
+ipywidgets==7.6.5
 jedi==0.18.0
 Jinja2==3.0.2
-joblib==1.1.0
+joblib==1.0.1
 json5==0.9.6
 jsonschema==4.1.2
 jupyter-client==7.0.6
@@ -30,24 +33,30 @@ jupyter-server==1.11.2
 jupyterlab==3.1.14
 jupyterlab-pygments==0.1.2
 jupyterlab-server==2.8.2
+jupyterlab-widgets==1.0.2
 kiwisolver==1.3.2
 MarkupSafe==2.0.1
 matplotlib==3.4.3
 matplotlib-inline==0.1.3
+missingno==0.5.0
 mistune==0.8.4
+multimethod==1.6
 nbclassic==0.3.4
 nbclient==0.5.4
 nbconvert==6.2.0
 nbformat==5.1.3
 nest-asyncio==1.5.1
+networkx==2.6.3
 notebook==6.4.5
 numpy==1.21.2
 packaging==21.2
 pandas==1.3.3
+pandas-profiling==3.1.0
 pandocfilters==1.5.0
 parso==0.8.2
 patsy==0.5.2
 pexpect==4.8.0
+phik==0.12.0
 pickleshare==0.7.5
 Pillow==8.4.0
 pluggy==1.0.0
@@ -56,12 +65,15 @@ prompt-toolkit==3.0.21
 ptyprocess==0.7.0
 py==1.10.0
 pycparser==2.20
+pydantic==1.8.2
 Pygments==2.10.0
 pyparsing==2.4.7
 pyrsistent==0.18.0
 pytest==6.2.5
 python-dateutil==2.8.2
 pytz==2021.3
+PyWavelets==1.1.1
+PyYAML==6.0
 pyzmq==22.3.0
 requests==2.26.0
 scikit-learn==1.0
@@ -71,16 +83,21 @@ Send2Trash==1.8.0
 six==1.16.0
 sniffio==1.2.0
 statsmodels==0.13.0
+tangled-up-in-unicode==0.1.0
 terminado==0.12.1
 testbook==0.4.2
 testpath==0.5.0
 threadpoolctl==3.0.0
 toml==0.10.2
 tornado==6.1
+tqdm==4.62.3
 traitlets==5.1.1
+typing-extensions==3.10.0.2
 urllib3==1.26.7
+visions==0.7.4
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.2.1
+widgetsnbextension==3.5.2
 xgboost==1.5.0
 xlrd==2.0.1
